# ant-coding-v2

./: .env.example  .gitignore  BRANCH_SUMMARY.md  README.md  pyproject.toml
.agent/: ant-dev.md  sprint.yml
ant-coding/stories_and_epics/: Sprint-1-Epic-1.md  Sprint-4-Epic-1.md  Sprint-4-Epic-2.md  Sprint-5-Epic-3.md  Sprint-6-Epic-2.md
configs/experiments/: baseline-sequential.yaml  roast-battle.yaml
configs/memory/: hybrid.yaml  isolated.yaml  shared.yaml
configs/models/: claude-sonnet.yaml  gemini-flash.yaml  gpt-4o.yaml
docs/: README.md  developer-guide.md  experimentation-playbook.md  prd-plus.md  prd.md
docs/architecture/: experiment-lifecycle.md  layer-interactions.md  memory-architecture.md
docs/guides/: experimentation-playbook.md
docs/spec/: prd-plus.md  success-metrics.md
experiments/: registry.yml
scripts/: compare_results.py  setup.sh
src/ant_coding.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stories_and_epics/: Sprint-2-Epic-1.md  Sprint-2-Epic-2.md  Sprint-3-Epic-1.md  Sprint-3-Epic-2.md  Sprint-3-Epic-3.md  Sprint-4-Epic-1.md  Sprint-4-Epic-2.md  Sprint-5-Epic-1.md  Sprint-5-Epic-2.md  Sprint-5-Epic-3.md  Sprint-6-Epic-1.md  Sprint-6-Epic-2.md  Sprint-6-Epic-3.md
tests/: test_comparison.py  test_comprehensive_coverage.py  test_config.py  test_env.py  test_eval.py  test_memory.py  test_models.py  test_observability.py  test_orchestration.py  test_protocols.py  test_registry.py  test_replay.py  test_reports.py  test_runner.py  test_tasks.py  test_tools.py  test_types.py  test_vanilla_architecture.py
(+44 files in other folders)
