[project]
name = "ant-coding"
version = "0.1.0"
description = "A framework for benchmarking agentic coding architectures."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "pydantic",
    "litellm",
    "google-adk",
    "gitpython",
    "scipy",
    "numpy",
    "rich",
    "aiofiles",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]
swebench = [
    "swe-bench",
    "datasets",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
